Should fix modal bug by implementing z-index property

--- a/src/components/review-components/reviews/form/form-styles.scss
+++ b/src/components/review-components/reviews/form/form-styles.scss
@@ -1,4 +1,5 @@
 .form-modal {
+  z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
@@ -8,6 +9,7 @@
 }
 
 .form-modal-main {
+  z-index: 2;
   position:fixed;
   background: white;
   width: 80%;
